# ASPETIC

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
